# shorewall-nft-stagelab

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yaml  tests.yaml
shorewall_nft_stagelab/: advisor.py  agent.py  audit_report.py  cli.py  config.py  controller.py  dos_safety.py  fw_rules.py  ipc.py  metrics.py  metrics_ingest.py  report.py  review.py  rule_order.py  scenarios.py  snmp_oids.py  standards.py  standards_bsi_cis.py  standards_cc_nist.py  standards_owasp_iso27001.py  standards_perf.py  standards_simlab.py  topology_bridge.py  topology_dpdk.py  topology_native.py  trafgen_iperf3.py  trafgen_nmap.py  trafgen_pyconn.py  trafgen_scapy.py  trafgen_tcpkali.py  trafgen_trex.py  trafgen_trex_dns_builder.py  trafgen_trex_profiles.py  trex_daemon.py  tuning.py
shorewall_nft_stagelab/templates/: audit_report.html.j2
tests/: test_package_imports.py
tests/fixtures/: iperf3_error.json  iperf3_tcp_success.json  iperf3_tcp_with_rtt.json  iperf3_udp_success.json  nft_list_counters.json  nft_ruleset_sample.txt  nmap_no_host.xml  nmap_tcp_open_closed.xml  prom_shorewalld.txt  tcpkali_stdout.txt
tests/integration/: test_agent_roundtrip.py  test_agent_runtime.py  test_audit_cli.py  test_controller_local.py  test_review_open_pr.py  test_stress_many_scenarios.py  test_topology_bridge.py  test_topology_dpdk.py  test_topology_native.py  test_trex_daemon_smoke.py
tests/unit/: test_advisor.py  test_agent_handlers.py  test_audit_report.py  test_cli.py  test_config.py  test_conntrack_overflow.py  test_controller_window_delta.py  test_dns_dos.py  test_dos_safety.py  test_evasion_probes.py  test_fw_rules.py  test_ha_failover_drill.py  test_half_open_dos.py  test_ipc.py  test_long_flow_survival.py  test_metrics.py  test_metrics_ingest.py  test_nft_ssh_source.py  test_recovery_file_locking.py  test_report.py  (+27 more)
